--- a/mlruns/341844573680170032/3390931225074880a0816ee2de0ff91e/meta.yaml
+++ b/mlruns/341844573680170032/3390931225074880a0816ee2de0ff91e/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/341844573680170032/3390931225074880a0816ee2de0ff91e/artifacts
+deleted_time: 1738910201507
 end_time: 1738908804124
 entry_point_name: ''
 experiment_id: '341844573680170032'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 3390931225074880a0816ee2de0ff91e
 run_name: mlops
 run_uuid: 3390931225074880a0816ee2de0ff91e
