--- a/mlruns/341844573680170032/76f4b2b835e44c4fad2e0be584ecd53e/meta.yaml
+++ b/mlruns/341844573680170032/76f4b2b835e44c4fad2e0be584ecd53e/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/341844573680170032/76f4b2b835e44c4fad2e0be584ecd53e/artifacts
+deleted_time: 1738910201534
 end_time: 1738908638460
 entry_point_name: ''
 experiment_id: '341844573680170032'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 76f4b2b835e44c4fad2e0be584ecd53e
 run_name: mlops
 run_uuid: 76f4b2b835e44c4fad2e0be584ecd53e
