--- a/mlruns/341844573680170032/dd900e33ffe54fe6939a4c52bc830f3f/meta.yaml
+++ b/mlruns/341844573680170032/dd900e33ffe54fe6939a4c52bc830f3f/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/341844573680170032/dd900e33ffe54fe6939a4c52bc830f3f/artifacts
+deleted_time: 1738910201500
 end_time: 1738909901497
 entry_point_name: ''
 experiment_id: '341844573680170032'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: dd900e33ffe54fe6939a4c52bc830f3f
 run_name: mlops
 run_uuid: dd900e33ffe54fe6939a4c52bc830f3f
