--- a/.github/cicd.yaml
+++ b/.github/cicd.yaml
@@ -1,14 +1,14 @@
-name: Build,Analyze,,Scan
 
+name: Build, Analyze, Scan
 on: 
     push:
         branches:
-            -main
+            - main
 
 jobs:
     build_analyze_scan:
         name: Build
-        runs-on: ubuntu-latest #[self-hosted]
+        runs-on: ubuntu-latest    #[self-hosted]
         steps:
             - name: Checkout
               uses: actions/checkout@v2
@@ -22,3 +22,5 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
+
+            
