--- a/.github/cicd.yaml
+++ b/.github/cicd.yaml
@@ -1,5 +1,5 @@
-
 name: Build, Analyze, Scan
+
 on: 
     push:
         branches:
@@ -14,7 +14,7 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Set up Python 3.11
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v3  # Consider upgrading to v3
               with:
                   python-version: 3.11
 
@@ -23,4 +23,11 @@ jobs:
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
 
-            
+            - name: Docker Build and Push
+              run: |
+                  docker-compose -f docker-compose.yaml build
+                  docker tag webapp:latest tanzeemrugrel/webapp:latest
+                  docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+                  docker push tanzeemrugrel/webapp:latest
+              env:
+                DOCKER_CLI_EXPERIMENTAL: 1  # Optional: Enable experimental Docker features
